migrated to exomachina identifier, prepared for icloud

--- a/Taggr-Info.plist
+++ b/Taggr-Info.plist
@@ -10,8 +10,28 @@
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>TaggrIcon57.png</string>
+		<string>TaggrIcon114.png</string>
+		<string>TaggrIcon72.png</string>
+	</array>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>TaggrIcon57.png</string>
+				<string>TaggrIcon114.png</string>
+				<string>TaggrIcon72.png</string>
+			</array>
+			<key>UIPrerenderedIcon</key>
+			<false/>
+		</dict>
+	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.listprojects.taggr</string>
+	<string>com.exomachina.taggr</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
